--- a/dspy_multiagent.ipynb
+++ b/dspy_multiagent.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,53 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "first model load...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "671459d722434235b185c8ca58dd0792",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deleting model...\n",
-      "reloading model...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d021a33a0c8a429dabbd9c99b8563a7b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gc\n",
     "import torch\n",
@@ -241,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,232 +435,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['True', 'True', 'True', 'True', 'True', 'True', 'True', 'True']"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "verify_collect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/transformers/generation/configuration_utils.py:540: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
-      "  warnings.warn(\n",
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selling Costs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "${verified}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Value: 0.0525\n",
-      "\n",
-      "Format Description: float between 0 and 1\n",
-      "\n",
-      "Reasoning: Let's think step by step in order to verify if the value is a float between 0 and 1. We check if the value is a float and if it is greater than or equal to 0 and less than or equal to 1.\n",
-      "\n",
-      "Verified: True\n",
-      "Disposition Fee\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "${verified}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Value: 0.055\n",
-      "\n",
-      "Format Description: float between 0 and 1\n",
-      "\n",
-      "Reasoning: Let's think step by step in order to verify if the value is a float between 0 and 1. We check if the value is a float and if it is less than or equal to 1 and greater than or equal to 0.\n",
-      "\n",
-      "Verified: True\n",
-      "Net Operating Income\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "${verified}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Value: 4644391.071083585\n",
-      "\n",
-      "Format Description: float >= 0\n",
-      "\n",
-      "Reasoning: Let's think step by step in order to verify if the value is a float greater than or equal to 0. We can convert the string to float and check if it is greater than or equal to 0.\n",
-      "\n",
-      "Verified: True\n",
-      "Loan Assumption/Payoff\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "${verified}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Value: 0\n",
-      "\n",
-      "Format Description: float <= 0\n",
-      "\n",
-      "Reasoning: Let's think step by step in order to check if the value is less than or equal to 0. We convert the value to float and compare it with 0.\n",
-      "\n",
-      "Verified: True\n",
-      "Return of Forecasted Reserves\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "${verified}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Value: 0\n",
-      "\n",
-      "Format Description: float <= 0\n",
-      "\n",
-      "Reasoning: Let's think step by step in order to check if the value is less than or equal to 0. We convert the value to float and compare it with 0.\n",
-      "\n",
-      "Verified: True\n",
-      "CF Y 11\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "${verified}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Value: 3870554.3880146043\n",
-      "\n",
-      "Format Description: float >= 0\n",
-      "\n",
-      "Reasoning: Let's think step by step in order to verify if the value is a float greater than or equal to 0. We can convert the string to float and check if it is greater than or equal to 0.\n",
-      "\n",
-      "Verified: True\n",
-      "Return of Maximum Offering Amount\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "${verified}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Value: -77670566.54709445\n",
-      "\n",
-      "Format Description: float <= 0\n",
-      "\n",
-      "Reasoning: Let's think step by step in order to check if the value is a float and less than or equal to 0. We can convert the value to a float and check if it is less than or equal to 0.\n",
-      "\n",
-      "Verified: True\n",
-      "Projected Terminal Cap Rate\n",
-      "${verified}\n",
-      "\n",
-      "---\n",
-      "\n",
-      "Value: 0.0525\n",
-      "\n",
-      "Format Description: float between 0 and 1\n",
-      "\n",
-      "Reasoning: Let's think step by step in order to verify if the value is a float between 0 and 1. We check if the value is a float and if it is greater than or equal to 0 and less than or equal to 1.\n",
-      "\n",
-      "Verified: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "collect_dict = {k.split(': ')[0]:k.split(': ')[1] for k in collect}\n",
     "verify_collect=[]\n",
@@ -719,160 +461,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['True', 'True', 'True', 'True', 'True', 'True', 'True', 'True']"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "verify_collect"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/transformers/generation/configuration_utils.py:540: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
-      "  warnings.warn(\n",
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selling Costs\n",
-      "Extract the value for Selling Costs. Selling Costs is a float between 0 and 1.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Disposition Fee\n",
-      "Extract the value for Disposition Fee. Disposition Fee is a float between 0 and 1.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Net Operating Income\n",
-      "Extract the value for Net Operating Income. Net Operating Income is a float >= 0.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loan Assumption/Payoff\n",
-      "Extract the value for Loan Assumption/Payoff. Loan Assumption/Payoff is a float <= 0.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Return of Forecasted Reserves\n",
-      "Extract the value for Return of Forecasted Reserves. Return of Forecasted Reserves is a float <= 0.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CF Y 11\n",
-      "Extract the value for CF Y 11. CF Y 11 is a float >= 0.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Return of Maximum Offering Amount\n",
-      "Extract the value for Return of Maximum Offering Amount. Return of Maximum Offering Amount is a float <= 0.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Projected Terminal Cap Rate\n",
-      "Extract the value for Projected Terminal Cap Rate. Projected Terminal Cap Rate is a float between 0 and 1.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "format_json = {'Selling Costs': 'float between 0 and 1', 'Disposition Fee': 'float between 0 and 1', 'Net Operating Income': 'float >= 0', 'Loan Assumption/Payoff': 'float <= 0', 'Return of Forecasted Reserves': 'float <= 0', 'CF Y 11': 'float >= 0', 'Return of Maximum Offering Amount': 'float <= 0', 'Projected Terminal Cap Rate': 'float between 0 and 1'}\n",
@@ -891,27 +482,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Selling Costs: 0.0525',\n",
-       " 'Disposition Fee: 0.055',\n",
-       " 'Net Operating Income: 4644391.071083585',\n",
-       " 'Loan Assumption/Payoff: 0',\n",
-       " 'Return of Forecasted Reserves: 0',\n",
-       " 'CF Y 11: 3870554.3880146043',\n",
-       " 'Return of Maximum Offering Amount: -77670566.54709445',\n",
-       " 'Projected Terminal Cap Rate: 0.0525']"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "collect"
    ]
@@ -936,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,88 +545,6 @@
    "outputs": [],
    "source": [
     "print(output[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(output[1].split(\"Verification: \")[-1].split('---')[0].strip())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(output[1].split(\"Verified Values: \")[-1].split('---')[0].strip())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(output[2])#.split(\"Verification: \")[-1].split('---')[0].strip())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(output.split('Answer: ')[-1].split(',')[:len(question.split(','))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(output.split('Answer:')[-1].strip().split('\\n')[:8])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(output.split('Answer:')[-1].strip())"
    ]
   },
   {
@@ -1690,6 +1181,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
