--- a/dspy_multiagent_fine_tune.ipynb
+++ b/dspy_multiagent_fine_tune.ipynb
@@ -19,14 +19,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "import sys\n",
-    "sys.setrecursionlimit(10000)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -63,57 +55,11 @@
     "from transformers import AutoModelForCausalLM\n",
     "from dspy.retrieve.chromadb_rm import ChromadbRM\n",
     "\n",
-    "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json\n",
+    "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json, split_df_by_empty_columns, split_df_by_empty_rows, print_trainable_parameters\n",
     "from models import SpreadSheetAnalyzer\n",
     "\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_trainable_parameters(model):\n",
-    "    \"\"\"\n",
-    "    Prints the number of trainable parameters in the model.\n",
-    "    \"\"\"\n",
-    "    trainable_params = 0\n",
-    "    all_param = 0\n",
-    "    for _, param in model.named_parameters():\n",
-    "        all_param += param.numel()\n",
-    "        if param.requires_grad:\n",
-    "            trainable_params += param.numel()\n",
-    "    print(\n",
-    "        f\"trainable params: {trainable_params} || all params: {all_param} || trainable%: {100 * trainable_params / all_param}\"\n",
-    "    )\n",
-    "\n",
-    "# Function to split DataFrame by empty columns\n",
-    "def split_df_by_empty_columns(df):\n",
-    "    # Identify indices of empty columns\n",
-    "    empty_cols = df.columns[df.isna().all()].tolist()\n",
-    "    # Split DataFrame by empty columns\n",
-    "    sub_dfs = np.split(df, df.columns.get_indexer(empty_cols) + 1, axis=1)\n",
-    "    # Filter out the empty DataFrames (which correspond to the empty columns)\n",
-    "    sub_dfs = [sub_df.dropna(axis=1, how='all') for sub_df in sub_dfs]\n",
-    "    return sub_dfs\n",
-    "\n",
-    "# Function to split a DataFrame by empty rows\n",
-    "def split_df_by_empty_rows(df):\n",
-    "    # Identify indices of empty rows\n",
-    "    empty_rows = df.index[df.isna().all(axis=1)].tolist()\n",
-    "    # Split DataFrame by empty rows\n",
-    "    sub_dfs = np.split(df, df.index.get_indexer(empty_rows) + 1, axis=0)\n",
-    "    # Filter out the empty DataFrames (which correspond to the empty rows)\n",
-    "    sub_dfs = [sub_df.dropna(axis=0, how='all') for sub_df in sub_dfs]\n",
-    "    return sub_dfs\n",
-    "\n",
-    "\n",
-    "# Displaying the final split DataFrames\n",
-    "# for i, final_df in enumerate(final_split_dfs, 1):\n",
-    "#     print(f\"DataFrame {i}:\\n{final_df}\\n\")"
    ]
   },
   {
@@ -212,7 +158,7 @@
     "    llm.model.generation_config.pad_token_id = llm.tokenizer.eos_token_id\n",
     "    llm.tokenizer.pad_token_id = llm.tokenizer.eos_token_id\n",
     "\n",
-    "# dspy.settings.configure(lm=llm)\n",
+    "dspy.settings.configure(lm=llm)\n",
     "\n",
     "######## RAG model\n",
     "chroma_client = chromadb.PersistentClient(path=CHROMADB_DIR)\n",
@@ -232,7 +178,7 @@
     "    collection.upsert(ids=ids, documents=documents)#, metadatas=metadatas)\n",
     "\n",
     "# default_ef = dspy.ColBERTv2(url='http://20.102.90.50:2017/wiki17_abstracts')\n",
-    "default_ef = embedding_functions.DefaultEmbeddingFunction()\n",
+    "default_ef = embedding_functions.HuggingFaceEmbeddingFunction(model_name='colbert-ir/colbertv2.0', api_key=access_token)\n",
     "retriever = ChromadbRM(CHROMA_COLLECTION_NAME, CHROMADB_DIR, default_ef, k=3)\n",
     "\n",
     "dspy.settings.configure(lm=llm, rm=retriever)"
@@ -245,6 +191,15 @@
     "from llama_index.readers.file import PandasExcelReader\n",
     "filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
     "docs = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\", pandas_config={'keep_default_na':False}).load_data(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "default_ef"
    ]
   },
   {
@@ -288,6 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "# dfs_str = get_csv_string(dfs)\n",
     "num_rounds = 8\n",
     "train_data = []\n",
@@ -301,7 +257,18 @@
     "\n",
     "        question = f\"Extract the value for the variable name '{value_to_extract}'?\"\n",
     "        answer = f\"{value_to_extract}: {gt_collect[value_to_extract]}\"\n",
-    "        train_data.append(dspy.Example(question=question, answer=answer).with_inputs('question'))"
+    "        train_data.append(dspy.Example(question=question, answer=answer).with_inputs('question'))\n",
+    "    \n",
+    "random.shuffle(train_data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "input_data = \"\"\n",
+    "for string in final_split_dfs:\n",
+    "    input_data += string"
    ]
   },
   {
@@ -314,8 +281,9 @@
     "%autoreload 2\n",
     "\n",
     "from train_utils import operators_dict, range_description_json\n",
-    "from models import SpreadSheetAnalyzer\n",
-    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict, num_passages=1)"
+    "# from models import SpreadSheetAnalyzer\n",
+    "from models_testing import SpreadSheetAnalyzer\n",
+    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict, num_passages=3)"
    ]
   },
   {
@@ -338,7 +306,7 @@
     "#Compile program on BootstrapFinetune\n",
     "finetune_optimizer = BootstrapFinetune(metric=metric)\n",
     "# finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data[:num_train], **config)\n",
-    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data, valset=train_data[-17:], **config)\n",
+    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data, **config)\n",
     "\n",
     "# finetune_program = spreadsheeet_ananlyst\n",
     "\n",
@@ -365,7 +333,7 @@
    "outputs": [],
    "source": [
     "#Load program and activate model's parameters in program before evaluation\n",
-    "ckpt_path = \"/workspace/repos/finetuning_ckpts/AD7CIJP78HTDP.all/checkpoint-190\"\n",
+    "ckpt_path = \"/workspace/repos/finetuning_ckpts/V8QQQ2LFCLU2Q.all/checkpoint-190\"\n",
     "LM = dspy.HFModel(checkpoint=ckpt_path, model=model_name)\n",
     "\n",
     "for p in finetune_program.predictors():\n",
@@ -409,12 +377,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "from train_utils import operators_dict, range_description_json\n",
+    "from models_testing import SpreadSheetAnalyzer\n",
+    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict, num_passages=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_data = \"\"\n",
+    "for string in final_split_dfs:\n",
+    "    input_data += string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# dfs_str = get_csv_string(dfs)\n",
     "collection = []\n",
     "for value_to_extract in gt_collect:\n",
     "    question = f\"Extract the value for the variable name '{value_to_extract}'?\"\n",
     "    print(question)\n",
-    "    pred = spreadsheeet_ananlyst(question, verbose=True)\n",
+    "    pred = spreadsheeet_ananlyst(question, data=input_data, verbose=True)\n",
     "    collection.append((pred, f\"{value_to_extract}: {gt_collect[value_to_extract]}\"))\n"
    ]
   },
@@ -454,41 +447,6 @@
    "outputs": [],
    "source": [
     "finetune_program"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = \"\"\"Extract the variable name from the question.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Follow the following format.\n",
-    "\n",
-    "Question: ${question}\n",
-    "Extracted Variable Name: Only return the variable name without any additional information.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Question: How can I extract the value for the variable name 'Selling Costs' from the given data?\n",
-    "Extracted Variable Name: Selling Costs\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Question: What is the total cost of the project, including all expenses, including the Selling Costs?\n",
-    "Extracted Variable Name: Total\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test.split('Extracted Variable Name: ')[2].split('\\n')[0]"
    ]
   },
   {
